--- a/res/layout-xlarge/settings_layout.xml
+++ b/res/layout-xlarge/settings_layout.xml
@@ -9,15 +9,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:text="@string/settingsTitle"
         android:textColor="#07565b"
-        android:textSize="40sp"
+        android:textSize="60sp"
         android:textStyle="bold" />
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="460dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_marginRight="60dp"
         android:src="@drawable/monkey_settings" />
@@ -26,8 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="180dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="240dp"
         android:text="@string/createGame"
         android:textColor="#07565b"
         android:textSize="33sp"
@@ -37,8 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="340dp"
         android:text="@string/nameGame"
         android:textColor="#07565b"
         android:textSize="25sp" />
@@ -48,8 +48,8 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="340dp"
         android:clickable="true"
         android:hint="@string/hintName"
         android:inputType="text"
@@ -60,8 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="430dp"
         android:text="@string/typeGame"
         android:textColor="#07565b"
         android:textSize="25sp" />
@@ -71,8 +71,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="260dp"
-        android:layout_marginTop="280dp" >
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="430dp" >
 
         <RadioButton
             android:id="@+id/radioAddition"
@@ -99,33 +99,33 @@
 
     <Button
         android:id="@+id/nextBtn"
-        android:layout_width="90dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="130dp"
+        android:layout_marginBottom="90dp"
+        android:layout_marginRight="220dp"
         android:background="#07565b"
         android:padding="10sp"
         android:text="@string/nextGame"
         android:textColor="#f4f1dd"
-        android:textSize="20sp" />
+        android:textSize="27sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="120dp"
         android:layout_marginLeft="90dp"
         android:text="@string/modifyGame"
         android:textColor="#07565b"
-        android:textSize="25sp" />
+        android:textSize="33sp" />
 
     <ListView
         android:id="@+id/listview"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="230dp" />
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="300dp" />
 
 </FrameLayout>
