--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -126,7 +126,8 @@
         android:id="@+id/listview"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginRight="170dp" />
+        android:layout_gravity="top"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="80dp" />
 
 </FrameLayout>
